--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         </div>
         <!--WATER PLANT-->
         <div class="col-sm-4">
-          <span class="water"></span>
+          <span class="fa fa-refresh fa-spin fa-fw margin-bottom" id="loadingFlower"></span>
           <span class="plant"></span>
         </div>
         <!--LIGHT ON/OFF-->
         <div class="col-sm-4">
-          <span class="power"></span>
+          <span class="power fa fa-power-off fa-3x"></span>
         </div>
       </div>
     </div>
