--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div class="container">
-      <div class="row">
+      <div class="row firstRow">
         <!--TIME / DATE-->
         <div class="col-sm-12 col-xs-12">
           <span class="time"></span>
