--- a/index.html
+++ b/index.html
@@ -18,33 +18,31 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="row firstRow">
+    <div class="container-fluid">
+      <div class="row">
         <!--TIME / DATE-->
-        <div class="col-sm-12 col-xs-12">
+        <div class="col-sm-12 col-xs-12" id="timeAndDate">
           <span class="time"></span>
           <span class="date"></span>
         </div>
-      </div>
-      <div class="row secondRow">
         <!--TEMPERATURE INSIDE-->
-        <span class="fa fa-refresh fa-spin fa-fw margin-bottom" id="loadingDevices"></span>
-      </div>
-      <div class="row thirdRow">
+        <div class="col-xs-12 col-sm-3" id="netatmo">
+          <span class="fa fa-refresh fa-spin fa-fw margin-bottom" id="loadingDevices"></span>
+        </div>
         <!--TEMPERATURE OUTSIDE-->
-        <div class="col-sm-4 col-xs-4">
+        <div class="col-sm-3 col-xs-4">
           <span class="fa fa-refresh fa-spin fa-fw margin-bottom" id="loading"></span>
           <span class="outsideTemp"></span>
           <span class="outsideIcon"></span>
           <span class="outsidePlace"></span>
         </div>
         <!--WATER PLANT-->
-        <div class="col-sm-4 col-xs-4">
+        <div class="col-sm-3 col-xs-4">
           <span class="fa fa-refresh fa-spin fa-fw margin-bottom" id="loadingFlower"></span>
           <span class="plant"></span>
         </div>
         <!--LIGHT ON/OFF-->
-        <div class="col-sm-4 col-xs-4">
+        <div class="col-sm-3 col-xs-4">
           <span class="power fa fa-power-off fa-2x"></span>
         </div>
       </div>
