--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
           <span class="outsidePlace"></span>
         </div>
         <!--WATER PLANT-->
-        <div class="col-sm-3 col-xs-4">
+        <div class="col-sm-3 col-xs-4" id="flowers">
           <span class="fa fa-refresh fa-spin fa-fw margin-bottom" id="loadingFlower"></span>
           <span class="plant"></span>
         </div>
         <!--LIGHT ON/OFF-->
-        <div class="col-sm-3 col-xs-4">
+        <div class="col-sm-3 col-xs-4" id="switch">
           <span class="power fa fa-power-off fa-2x"></span>
         </div>
+      </div>
+      <div class="fullscreen">
+        <span class="fa fa-expand"></span>
       </div>
     </div>
 
